Update Readme and add properties for jdbc/datasource configuration